--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,7 @@
 ignore-workspace-root-check=true
 shell-emulator=true
 @icqq-plus:registry=https://npm.pkg.github.com
+
+registry=https://registry.npmjs.org/
+//registry.npmjs.org/:always-auth=true
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
