--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kolaris-bot",
   "type": "module",
-  "version": "0.0.6",
+  "version": "0.0.8",
   "packageManager": "pnpm@8.4.0",
   "description": "icqq bot 框架",
   "author": {
@@ -57,10 +57,18 @@
   "dependencies": {
     "@icqq-plus/icqq": "^1.3.3",
     "@types/fs-extra": "^11.0.4",
+    "@types/koa": "^2.15.0",
+    "@types/koa-bodyparser": "^4.3.12",
+    "@types/koa-router": "^7.4.8",
     "@types/minimist": "^1.2.5",
+    "@types/mysql": "^2.15.26",
     "@types/node-cron": "^3.0.11",
     "fs-extra": "^11.2.0",
+    "koa": "^2.15.3",
+    "koa-bodyparser": "^4.4.1",
+    "koa-router": "^13.0.1",
     "minimist": "^1.2.8",
+    "mysql": "^2.18.1",
     "node-cron": "^3.0.3"
   },
   "devDependencies": {
