--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kolaris-bot",
   "type": "module",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "packageManager": "pnpm@8.4.0",
   "description": "icqq bot 框架",
   "author": {
@@ -63,6 +63,7 @@
     "@types/minimist": "^1.2.5",
     "@types/mysql": "^2.15.26",
     "@types/node-cron": "^3.0.11",
+    "classic-level": "^2.0.0",
     "fs-extra": "^11.2.0",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
