build: 修改icqq 到 私人

--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 ignore-workspace-root-check=true
 shell-emulator=true
-@icqq-plus:registry=https://npm.pkg.github.com
+@14kay:registry=https://npm.pkg.github.com
 
 registry=https://registry.npmjs.org/
 //registry.npmjs.org/:always-auth=true
