--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kolaris-bot",
   "type": "module",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "packageManager": "pnpm@8.4.0",
   "description": "icqq bot 框架",
   "author": {
@@ -55,7 +55,7 @@
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
-    "@icqq-plus/icqq": "^1.3.3",
+    "@14kay/icqq-plus": "^1.3.3",
     "@types/fs-extra": "^11.0.4",
     "@types/koa": "^2.15.0",
     "@types/koa-bodyparser": "^4.3.12",
